Implemented word lookup in angular frontend

--- a/fe2/web/index.html
+++ b/fe2/web/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Spancard!</title>
+    <title>Getting Started</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
+    <meta name="description" content="Learn Spanish now!">
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"
+    integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
+    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <base href="/">
   </head>
   <body>
